--- a/tournament.html
+++ b/tournament.html
@@ -7,6 +7,7 @@
 	<title>Dark Slot</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/style.min.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
@@ -365,7 +366,7 @@
 
 		</div>
 
-		<section class="slider">
+				<section class="slider">
 			<div class="slide">
 				<div class="slide__image-wrapper">
 					<img src="img/slide-image-2.png" alt="slide" class="slide__image">
@@ -378,7 +379,7 @@
 							<span class="slide-bonus__first-line">10$</span>
 							<span class="slide-bonus__second-line">без депозита</span>
 							<span class="slide-bonus__third-line">- за регистрацию -</span>
-							<a href="#" class="slide-bonus__link">Подробнее</a>
+							<button class="slide-bonus__link" id="slider-button-rules">Подробнее</button>
 						</div>
 
 						<form action="#" class="registration-form-mini">
@@ -414,22 +415,20 @@
 					<div class="slide__text">
 						<span class="slide__upper-text">Розыгрыш каждую неделю</span>
 						<h1 class="slide__header">100% кэшбек</h1>
-						<a href="#" class="slide__button">Подробнее</a>
+						<a href="everyweek-cashback.html" class="slide__button">Подробнее</a>
 					</div>
 				</div>
 			</div>
 
 			<div class="slide">
 				<div class="slide__image-wrapper">
-					<a href="day-slot.html">
-						<img src="img/day-slot.jpg" alt="slide" class="slide__image">
-					</a>
+					<img src="img/day-slot.jpg" alt="slide" class="slide__image">
 				</div>
 
 				<div class="slide__button-wrapper">
-					<a href="day-slot.html" class="slide__button slide__button--centered">Подробнее</a>
+					<a href="day-slot.html" class="slide__button slide__button--centered">Играть</a>
 				</div>
-			</div> 
+			</div>
 
 			<div class="slide">
 				<div class="slide__image-wrapper">
@@ -443,8 +442,9 @@
 
 							<div class="registration-bonus">
 								<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>	
+								<h3 class="registration-bonus__underheader">Приветственный бонус</h3>
 								<span class="registration-bonus__count">1800$</span>
+								<a href="bonus.html" class="registration-bonus__details">Подробнее</a>
 							</div>
 
 							<div class="registration__character-wrapper">
@@ -479,9 +479,7 @@
 
 			<div class="slide">
 				<div class="slide__image-wrapper">
-					<a href="free-spins.html">
-						<img src="img/free-spins.png" alt="slide" class="slide__image">
-					</a>
+					<img src="img/free-spins.png" alt="slide" class="slide__image">
 				</div>
 
 				<div class="slide__button-wrapper">
