--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/slick-theme.css">
 </head>
 <body>
-	
+
 	<section class="error">
 		<a href="index.html">
 			<div class="error__wrapper">
@@ -31,55 +31,9 @@
 
 	<div id="preloader"></div>
 
-	<script type="text/javascript">
-		var preloader = document.getElementById("preloader");
-		function fadeOutnojquery(el){
-			el.style.opacity = 1;
-			var innerpreloader = setInterval(function() {
-				el.style.opacity = el.style.opacity - 0.05;
-				if (el.style.opacity <=0.05) {
-					clearInterval(innerpreloader);
-					preloader.style.display = "none";
-				}
-			},16);
-		}
-		window.onload = function(){setTimeout(function(){fadeOutnojquery(preloader);
-		},1000);};
-	</script>
-
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 
 	<script type="text/javascript" src="js/slick.min.js"></script>
-
-	<script type="text/javascript">
-		$('.slider').slick({
-			infinite: true,
-			autoplay: true,
-			autoplaySpeed: 3000,
-			slidesToShow: 1,
-			arrows: true,
-			responsive: [
-			{
-				breakpoint: 788,
-				settings: {
-					infinite: true,
-					autoplay: true,
-					autoplaySpeed: 3000,
-					slidesToShow: 1,
-					arrows: false
-				}
-			}
-			]
-		});
-
-		$('.top-games__wrapper').slick({
-			infinite: true,
-			autoplay: true,
-			autoplaySpeed: 3000,
-			slidesToShow: 7,
-			arrows: false
-		});
-	</script>
 
 	<script type="text/javascript" src="js/tabs.js"></script>
 
@@ -88,6 +42,8 @@
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
 	<script type="text/javascript" src="js/modals.js"></script>
+
+	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
