little fixes, anchors in menu

--- a/free-spins.html
+++ b/free-spins.html
@@ -53,10 +53,10 @@
 
 						<ul class="main-nav__dropdown">
 							<li class="main-nav__dropdown-item"><a href="bonus.html">Приветственный бонус</a></li>
-							<li class="main-nav__dropdown-item"><a href="bonus.html">VIP Bonus</a></li>
+							<li class="main-nav__dropdown-item"><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
 							<li class="main-nav__dropdown-item"><a href="reload-bonus.html">Reload бонус</a></li>
 							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Кэшбек</a></li>
-							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html">Live Casino Cashback</a></li>
+							<li class="main-nav__dropdown-item"><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
 							<li class="main-nav__dropdown-item"><a href="day-slot.html">Слот дня во вторник</a></li>
 							<li class="main-nav__dropdown-item"><a href="free-spins.html">Фриспины в четверг</a></li>
 							<li class="main-nav__dropdown-item"><a href="tournament.html">Darkslot турнир</a></li>
@@ -263,7 +263,7 @@
 			<div class="footer__wrapper">
 				<div class="footer__copyright"></div>
 				<div class="footer__development">
-					<span class="footer__developer">Разработка сайта: </span>
+					<span class="footer__developer">Дизайн сайта: </span>
 					<a href="http://www.crepla.com/" target="blank"><img src="img/crepla-logo.png" alt="crepla" class="footer__crepla-logo"></a>
 				</div>
 			</div>
@@ -322,7 +322,7 @@
 				<h2 class="modal-form__header">Регистрация</h2>
 
 				<div class="social-enter social-enter--reg">
-					<span class="social-enter__text">Войти с помощью:</span>
+					<span class="social-enter__text">Зарегестрироваться с помощью:</span>
 
 					<div class="social-enter__socials">
 						<button class="social-enter__soc social-enter__soc--fb"></button>
