level-up fixes, authorized user

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 				<button class="header__first-button">Регистрация</button>
 				<button class="header__second-button">Вход</button>
 			</div>
+
+			<div class="header__authorized">
+				<div class="header__nickname">
+					<span>anonymus</span>
+				</div>
+				<div class="header__money">
+					<span>200 BTC</span>
+				</div>
+				<button class="header__second-button">Депозит</button>
+			</div>
 		</div>
 	</header>
 
@@ -655,7 +665,7 @@
 
 				<input type="email" class="modal-form__input" placeholder="Email">
 				<input type="password" class="modal-form__input" placeholder="Пароль">
-				<input type="submit" class="modal-form__button" value="Войти">
+				<input type="submit" class="modal-form__button" id="enter-button" value="Войти">
 
 				<div class="social-enter">
 					<span class="social-enter__text">Войти с помощью:</span>
@@ -1116,7 +1126,7 @@
 
 	<script type="text/javascript" src="js/tabs.js"></script>
 
-	<script type="text/javascript" src="js/mobile-menu.js"></script>
+	<script type="text/javascript" src="js/menu.js"></script>
 
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
