--- a/tournament.html
+++ b/tournament.html
@@ -83,6 +83,16 @@
 				<button class="header__first-button">Регистрация</button>
 				<button class="header__second-button">Вход</button>
 			</div>
+
+			<div class="header__authorized">
+				<div class="header__nickname">
+					<span>anonymus</span>
+				</div>
+				<div class="header__money">
+					<span>200 BTC</span>
+				</div>
+				<button class="header__second-button">Депозит</button>
+			</div>
 		</div>
 	</header>
 
@@ -1100,7 +1110,7 @@
 
 	<script type="text/javascript" src="js/tabs.js"></script>
 
-	<script type="text/javascript" src="js/mobile-menu.js"></script>
+	<script type="text/javascript" src="js/mmenu.js"></script>
 
 	<script type="text/javascript" src="js/fixed-bar.js"></script>
 
