--- a/day-slot.html
+++ b/day-slot.html
@@ -460,7 +460,7 @@
 
 				<input type="email" class="modal-form__input" placeholder="Email">
 				<input type="password" class="modal-form__input" placeholder="Пароль">
-				<input type="submit" class="modal-form__button" value="Войти">
+				<input type="submit" class="modal-form__button" id="enter-button" value="Войти">
 
 				<div class="social-enter">
 					<span class="social-enter__text">Войти с помощью:</span>
