--- a/blog.html
+++ b/blog.html
@@ -86,11 +86,25 @@
 			</div>
 
 			<div class="header__authorized">
-				<div class="header__nickname">
+				<div class="header__auth-user">
 					<span>anonymus</span>
+					<ul class="header__dropdown">
+						<li class="header__dropdown-item">list item 77777</li>
+						<li class="header__dropdown-item">item 222</li>
+						<li class="header__dropdown-item">item 222</li>
+						<li class="header__dropdown-item">item 222</li>
+						<li class="header__dropdown-item">item 222</li>
+					</ul>
 				</div>
-				<div class="header__money">
+				<div class="header__auth-user">
 					<span>200 BTC</span>
+					<ul class="header__dropdown">
+						<li class="header__dropdown-item">Bitcoin</li>
+						<li class="header__dropdown-item">$$$$$$$$</li>
+						<li class="header__dropdown-item">Евро</li>
+						<li class="header__dropdown-item">item</li>
+						<li class="header__dropdown-item">item</li>
+					</ul>
 				</div>
 				<button class="header__second-button">Депозит</button>
 			</div>
