--- a/about.html
+++ b/about.html
@@ -86,6 +86,10 @@
 
 			<div class="header__authorized">
 				<div class="header__auth-user">
+					<div class="header__user-image">
+						<img src="img/user-icon.png" alt="user">
+						<span>2</span>
+					</div>
 					<span>anonymus</span>
 					<ul class="header__dropdown">
 						<li class="header__dropdown-item">list item 77777</li>
@@ -96,6 +100,9 @@
 					</ul>
 				</div>
 				<div class="header__auth-user">
+					<div class="header__user-image">
+						<img src="img/user-money.png" alt="money">
+					</div>
 					<span>200 BTC</span>
 					<ul class="header__dropdown">
 						<li class="header__dropdown-item">Bitcoin</li>
