Gulpfile.js new

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="css/jquery.formstyler.css">
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
+
+	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body class="page-home">
 
