--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Dark Slot</title>
 	<link rel="shortcut icon" href="img/favicon.png" type="image/png">
-	<link rel="stylesheet" href="css/style.min.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/slick.css">
-	<link rel="stylesheet" href="css/slick-theme.css">
-	<link rel="stylesheet" href="css/jquery.formstyler.css">
+	<!-- <link rel="stylesheet" href="css/style.min.css"> -->
+	<!-- <link rel="stylesheet" href="css/animate.css"> -->
+	<!-- <link rel="stylesheet" href="css/slick.css"> -->
+	<!-- <link rel="stylesheet" href="css/slick-theme.css"> -->
+	<!-- <link rel="stylesheet" href="css/jquery.formstyler.css"> -->
 	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css">
 
 	<link rel="stylesheet" href="assets/css/main.css">
@@ -20,6 +20,62 @@
 	<header class="header">
 		<nav class="navbar navbar-inverse navbar-fixed-top">
 		  <div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="index.html"><span class="main-nav__logo"></span></a>
+		    </div>
+
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Игры <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Лобби</a></li>
+								<li><a href="#">Слоты</a></li>
+								<li><a href="#">Джекпоты</a></li>
+								<li><a href="#">Настольные</a></li>
+								<li><a href="#">Live диллер</a></li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Акции <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="bonus.html">Приветственный бонус</a></li>
+								<li><a href="bonus.html#vip-bonus">VIP Bonus</a></li>
+								<li><a href="reload-bonus.html">Reload бонус</a></li>
+								<li><a href="everyweek-cashback.html">Кэшбек</a></li>
+								<li><a href="everyweek-cashback.html#live-casino">Live Casino Cashback</a></li>
+								<li><a href="day-slot.html">Слот дня во вторник</a></li>
+								<li><a href="free-spins.html">Фриспины в четверг</a></li>
+								<li><a href="tournament.html">Darkslot турнир</a></li>
+								<li><a href="levels.html">Уровни игроков</a></li>
+							</ul>
+						</li>
+		        <li><a href="#">Поддержка</a></li>
+		        <li><a href="#">Партнерам</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">О нас <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li><a href="about.html">О DarkSlot</a></li>
+								<li><a href="blog.html">Блог</a></li>
+								<li><a href="#" class="main-nav__dropdown-rules">Положения и условия</a></li>
+								<li><a href="#" class="main-nav__dropdown-policy">Политика конфиденциальности</a></li>
+							</ul>
+						</li>
+		      </ul>
+
+		      <ul class="nav navbar-nav navbar-right">
+		        <li><a href="#">Регистрация</a></li>
+		        <li><a href="#">Вход</a></li>
+		      </ul>
+		    </div><!-- /.navbar-collapse -->
 				<div class="header__wrapper">
 
 					<nav class="main-nav">
@@ -412,7 +468,7 @@
 		<section id="gamesPannel" class="tabs">
 
 			<nav class="navbar navbar-inverse">
-			  <div class="container-fluid">
+			  <div class="container">
 					<div class="row">
 						<!-- Brand and toggle get grouped for better mobile display -->
 						<div class="navbar-header">
@@ -427,11 +483,11 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-nav">
-								<li class="active"><a href="#">Лобби <span class="sr-only">(current)</span></a></li>
-								<li><a href="#">Слоты</a></li>
-								<li><a href="#">Джекпоты</a></li>
-								<li><a href="#">Настольные</a></li>
-								<li><a href="#">Live диллер</a></li>
+								<li class="active"><a href="#"><span class="switchers__image switchers__image--first"></span> Лобби <span class="sr-only">(current)</span></a></li>
+								<li><a href="#"><span class="switchers__image switchers__image--second"></span> Слоты</a></li>
+								<li><a href="#"><span class="switchers__image switchers__image--third"> Джекпоты</a></li>
+								<li><a href="#"><span class="switchers__image switchers__image--fourth"> Настольные</a></li>
+								<li><a href="#"><span class="switchers__image switchers__image--fifth"> Live диллер</a></li>
 							</ul>
 
 							<ul class="nav navbar-nav navbar-right">
@@ -455,7 +511,7 @@
 					<div class="col-md-6">
 						<h2 class="tab__header">Топ игры</h2>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 text-right">
 						<button class="tab__button">Случайная игра</button>
 					</div>
 				</div>
@@ -486,114 +542,12 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="tab__more-button">Показать больше</div>
+					<div class="col-sm-12">
+						<div class="tab__more-button">Показать больше</div>
+					</div>
 				</div>
 			</div>
-			<div class="tabs__wrapper">
 
-				<div class="switchers">
-					<div class="switchers__switcher switchers__switcher--active"><div class="switchers__image switchers__image--first"></div>Лобби</div>
-					<div class="switchers__switcher"><div class="switchers__image switchers__image--second"></div>Слоты</div>
-					<div class="switchers__switcher"><div class="switchers__image switchers__image--third"></div>Джекпоты</div>
-					<div class="switchers__switcher"><div class="switchers__image switchers__image--fourth"></div>Настольные</div>
-					<div class="switchers__switcher"><div class="switchers__image switchers__image--fifth"></div>Live диллер</div>
-				</div>
-
-				<form action="#" class="tabs__select-form">
-					<span class="tabs__provider">Провайдер:</span>
-					<select name="provider" id="provider" class="tabs__select">
-						<option value="NetEnt">NetEnt</option>
-						<option value="Amatic">Amatic</option>
-						<option value="Ezugi">Ezugi</option>
-						<option value="Softswiss">Softswiss</option>
-					</select>
-				</form>
-
-				<div class="tab tab--active">
-					<h2 class="tab__header">Топ игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<!-- <div class="tab__variants-wrapper"></div> -->
-
-					<div class="tab__more-button">Показать больше</div>
-				</div>
-
-				<div class="tab">
-					<h2 class="tab__header">Топ игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">2</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-
-					<div class="tab__more-button">Показать больше</div>
-				</div>
-
-				<div class="tab">
-					<h2 class="tab__header">Топ игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">3</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-
-					<div class="tab__more-button">Показать больше</div>
-				</div>
-
-				<div class="tab">
-					<h2 class="tab__header">Топ игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">4</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-
-					<div class="tab__more-button">Показать больше</div>
-				</div>
-
-				<div class="tab">
-					<h2 class="tab__header">Топ игры</h2>
-					<button class="tab__button">Случайная игра</button>
-
-					<div class="tab__variants-wrapper">
-						<div class="tab__variant">5</div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-						<div class="tab__variant"></div>
-					</div>
-
-					<div class="tab__more-button">Показать больше</div>
-				</div>
-			</div>
 		</section>
 
 		<section class="jackpot">
@@ -696,40 +650,40 @@
 		</section>
 
 		<section class="registration">
-			<div class="registration__wrapper">
+			<div class="container">
+				<div class="row">
+					<div class="registration-bonus">
+						<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
+						<h3 class="registration-bonus__underheader">Приветственный бонус</h3>
+						<span class="registration-bonus__count">1800$</span>
+					</div>
 
-				<div class="registration-bonus">
-					<h3 class="registration-bonus__header">Зарегистрируйся и получи</h3>
-					<h3 class="registration-bonus__underheader">Приветственный бонус</h3>
-					<span class="registration-bonus__count">1800$</span>
+					<div class="registration__character-wrapper">
+						<img src="img/tiger.png" alt="toger" class="registration__character">
+					</div>
+
+					<form action="#" class="registration-form-mini registration-form-mini--bottom">
+						<input type="email" placeholder="Email" class="registration-form-mini__email">
+						<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
+						<input type="password" placeholder="Пароль" class="registration-form-mini__password">
+						<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
+						<select name="" id="bottom-reg-select" class="registration-form-mini__select">
+							<option value="currency" selected disabled>Валюта</option>
+							<option value="rub">Рубли</option>
+							<option value="euro">Евро</option>
+							<option value="dollar">Доллары</option>
+							<option value="btc">Биткоины</option>
+						</select>
+
+						<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
+						<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
+
+						<input type="submit" class="registration-form-mini__button" value="Регистрация">
+						<button class="registration__reg-button">Регистрация</button>
+					</form>
 				</div>
-
-				<div class="registration__character-wrapper">
-					<img src="img/tiger.png" alt="toger" class="registration__character">
-				</div>
-
-				<form action="#" class="registration-form-mini registration-form-mini--bottom">
-					<input type="email" placeholder="Email" class="registration-form-mini__email">
-					<input type="text" placeholder="Никнейм" class="registration-form-mini__nickname">
-					<input type="password" placeholder="Пароль" class="registration-form-mini__password">
-					<input type="password" placeholder="Подтверждение пароля" class="registration-form-mini__password-confirm">
-					<select name="" id="bottom-reg-select" class="registration-form-mini__select">
-						<option value="currency" selected disabled>Валюта</option>
-						<option value="rub">Рубли</option>
-						<option value="euro">Евро</option>
-						<option value="dollar">Доллары</option>
-						<option value="btc">Биткоины</option>
-					</select>
-
-					<input type="checkbox" id="bottom-form-checkbox" class="registration-form-mini__checkbox">
-					<label for="bottom-form-checkbox" class="registration-form-mini__label-checkbox">Мне 18 лет и я принимаю Положения и условия</label>
-
-					<input type="submit" class="registration-form-mini__button" value="Регистрация">
-				</form>
-
-				<button class="registration__reg-button">Регистрация</button>
-
 			</div>
+			<!-- <div class="registration__wrapper"></div> -->
 		</section>
 
 		<section class="popular-games">
