--- a/index.html
+++ b/index.html
@@ -1432,6 +1432,14 @@
 		</div>
 	</div>
 
+	<!-- Уже сделаны модалки:
+ 			регистрация,
+			авторизация,
+			забыли пароль,
+			поддержка -->
+
+	<!-- Добавляй новые модалки под модалку modalSupport -->
+
 
 		<!-- Auth modals -->
 
@@ -1583,7 +1591,7 @@
 		</div>
 
 
-	<div class="level-modal-bg"></div>
+	<!-- <div class="level-modal-bg"></div> -->
 	<div id="preloader"></div>
 
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
